some new addition

--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>hello coursera</title>
+	<title>div and span elements</title>
 </head>
 <body>
-<h1>hello coursera! It's a great course.</h1>
+	<h1 style="text-align: center; color: maroon;">intro to div and span</h1>
+
+<div>*** div 1 : some
+here***</div>
+<div>*** div 2: following right after div1</div>
+<span>*** span 1: folllowing 
+right after div 2 ***</span>
+
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
